--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^2.2.3"
 matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 gurobipy = "^11.0.3"
+openpyxl = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
